# segmentation

./: README.md  docker-compose.yml
docker/: Dockerfile
ros/object_detection/: CMakeLists.txt  package.xml
ros/object_detection/msg/: DetectedObjectList.msg
ros/object_detection/src/object_detection/: segmentation.py
ros/object_detection/tests/: test_object_detection.py  test_object_detection.test
ros/scene_graph/: CMakeLists.txt  package.xml  setup.py
