<?xml version="1.0" ?>
<package format="2">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>The object_detection package</description>
  <maintainer email="ngilpin3@gatech.edu">Nicholas Gilpin</maintainer>
  <maintainer email="acmiyaguchi@gatech.edu">Anthony Miyaguchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ros_pytest</test_depend>
  <export />
</package>
